--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/Assets/style.css">
     <title>Weather Dashboard</title>
 </head>
+
+<header class="header">
+    <div class="name">
+        <p class="title">Weather Dashboard</p>
+    </div>
+</header>
+
 <body>
-    
+    <main class="main">
+        <section class="search">
+
+        </section>
+
+        <section class="current">
+
+        </section>
+
+        <section class="fiveDay">
+            
+        </section>
+    </main>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./Assets/script.js"></script>
 </body>
