finished flex box

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                         <div class="icon">Icon</div>
                     </section>
                     <section class="info-container">
-                        <p>Temperature:</p>
-                        <p>Wind:</p>
-                        <p>Humidity:</p>
+                        <p>Temperature:<span class="temperature"></span></p>
+                        <p>Wind:<span class="wind"></span></p>
+                        <p>Humidity:<span class="humidity"></span></p>
                     </section>
                 </section>
                 <section class="forecast-container">
@@ -39,7 +39,42 @@
                         <h2>5-Day Forecast:</h2>
                     </section>
                     <div class="forecast-cards">
-
+                        <div class="five-day-cards dayOne">
+                            <p>MM/DD/YYYY</p>
+                            <p>Icon</p>
+                            <p>Temperature:</p>
+                            <p>Wind:</p>
+                            <p>Humidity:</p>
+                        </div>
+                        <div class="five-day-cards dayTwo">
+                            <p>MM/DD/YYYY</p>
+                            <p>Icon</p>
+                            <p>Temperature:</p>
+                            <p>Wind:</p>
+                            <p>Humidity:</p>
+                        </div>
+                        <div class="five-day-cards dayThree">
+                            <p>MM/DD/YYYY</p>
+                            <p>Icon</p>
+                            <p>Temperature:</p>
+                            <p>Wind:</p>
+                            <p>Humidity:</p>
+                        </div>
+                        <div class="five-day-cards dayFour">
+                            <p>MM/DD/YYYY</p>
+                            <p>Icon</p>
+                            <p>Temperature:</p>
+                            <p>Wind:</p>
+                            <p>Humidity:</p>
+                        </div>
+                        <div class="five-day-cards dayFive">
+                            <p>MM/DD/YYYY</p>
+                            <p>Icon</p>
+                            <p>Temperature:</p>
+                            <p>Wind:</p>
+                            <p>Humidity:</p>
+                        </div>
+                        <!--there needs to be 5 divs built and set up like the wireframe-->
                     </div>
                 </section>
             </section>
