.text added values

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <section class="current-city-container">
                 <section class="current-day-container">
                     <section class="date-container">
-                        <h2 class="current-date">City MM/DD/YYYY</h2>
-                        <div class="icon">Icon</div>
+                        <h2 class="current-date"><span id="city"></span> <span id="date"></span></h2>
+                        <div id="icon"></div>
                     </section>
                     <section class="info-container">
-                        <p>Temperature:<span class="temperature"></span></p>
-                        <p>Wind:<span class="wind"></span></p>
-                        <p>Humidity:<span class="humidity"></span></p>
+                        <p>Temperature: <span id="currentTemperature"></span></p>
+                        <p>Wind: <span id="currentWind"></span></p>
+                        <p>Humidity: <span id="currentHumidity"></span></p>
                     </section>
                 </section>
                 <section class="forecast-container">
@@ -40,39 +40,39 @@
                     </section>
                     <div class="forecast-cards">
                         <div class="five-day-cards dayOne">
-                            <p>MM/DD/YYYY</p>
-                            <p>Icon</p>
-                            <p>Temperature:</p>
-                            <p>Wind:</p>
-                            <p>Humidity:</p>
+                            <p id="dayOneDate">MM/DD/YYYY</p>
+                            <p id="dayOneIcon">Icon</p>
+                            <p id="dayOneTemp">Temperature:</p>
+                            <p id="dayOneWind">Wind:</p>
+                            <p id="dayOneHumidity">Humidity:</p>
                         </div>
                         <div class="five-day-cards dayTwo">
-                            <p>MM/DD/YYYY</p>
-                            <p>Icon</p>
-                            <p>Temperature:</p>
-                            <p>Wind:</p>
-                            <p>Humidity:</p>
+                            <p id="dayTwoDate">MM/DD/YYYY</p>
+                            <p id="dayTwoIcon">Icon</p>
+                            <p id="dayTwoTemp">Temperature:</p>
+                            <p id="dayTwoWind">Wind:</p>
+                            <p id="dayTwoHumidity">Humidity:</p>
                         </div>
                         <div class="five-day-cards dayThree">
-                            <p>MM/DD/YYYY</p>
-                            <p>Icon</p>
-                            <p>Temperature:</p>
-                            <p>Wind:</p>
-                            <p>Humidity:</p>
+                            <p id="dayThreeDate">MM/DD/YYYY</p>
+                            <p id="dayThreeIcon">Icon</p>
+                            <p id="dayThreeTemp">Temperature:</p>
+                            <p id="dayThreeWind">Wind:</p>
+                            <p id="dayThreeHumidity">Humidity:</p>
                         </div>
                         <div class="five-day-cards dayFour">
-                            <p>MM/DD/YYYY</p>
-                            <p>Icon</p>
-                            <p>Temperature:</p>
-                            <p>Wind:</p>
-                            <p>Humidity:</p>
+                            <p id="dayFourDate">MM/DD/YYYY</p>
+                            <p id="dayFourIcon">Icon</p>
+                            <p id="dayFourTemp">Temperature:</p>
+                            <p id="dayFourWind">Wind:</p>
+                            <p id="dayFourHumidity">Humidity:</p>
                         </div>
                         <div class="five-day-cards dayFive">
-                            <p>MM/DD/YYYY</p>
-                            <p>Icon</p>
-                            <p>Temperature:</p>
-                            <p>Wind:</p>
-                            <p>Humidity:</p>
+                            <p id="dayFiveDate">MM/DD/YYYY</p>
+                            <p id="dayFiveIcon">Icon</p>
+                            <p id="dayFiveTemp">Temperature:</p>
+                            <p id="dayFiveWind">Wind:</p>
+                            <p id="dayFiveHumidity">Humidity:</p>
                         </div>
                     </div>
                 </section>
