--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                         <div id="icon"></div>
                     </section>
                     <section class="info-container">
-                        <p>Temperature: <span id="currentTemperature"></span></p>
-                        <p>Wind: <span id="currentWind"></span></p>
-                        <p>Humidity: <span id="currentHumidity"></span></p>
+                        <p>Temperature: <span id="currentTemperature"></span> ºF</p>
+                        <p>Wind: <span id="currentWind"></span> mph</p>
+                        <p>Humidity: <span id="currentHumidity"></span>%</p>
                     </section>
                 </section>
                 <section class="forecast-container">
@@ -40,39 +40,39 @@
                     </section>
                     <div class="forecast-cards">
                         <div class="five-day-cards dayOne">
-                            <p id="dayOneDate">MM/DD/YYYY</p>
-                            <p id="dayOneIcon">Icon</p>
-                            <p id="dayOneTemp">Temperature:</p>
-                            <p id="dayOneWind">Wind:</p>
-                            <p id="dayOneHumidity">Humidity:</p>
+                            <p><span id="dayOneDate">MM/DD/YYYY</span></p>
+                            <span id="dayOneIcon">Icon</span>
+                            <p>Temperature: <span id="dayOneTemp"></span> ºF</p>
+                            <p>Wind: <span id="dayOneWind"></span> mph</p>
+                            <p>Humidity: <span id="dayOneHumidity"></span>%</p>
                         </div>
                         <div class="five-day-cards dayTwo">
-                            <p id="dayTwoDate">MM/DD/YYYY</p>
-                            <p id="dayTwoIcon">Icon</p>
-                            <p id="dayTwoTemp">Temperature:</p>
-                            <p id="dayTwoWind">Wind:</p>
-                            <p id="dayTwoHumidity">Humidity:</p>
+                            <p><span id="dayTwoDate">MM/DD/YYYY</span></p>
+                            <span id="dayTwoIcon">Icon</span>
+                            <p>Temperature: <span id="dayTwoTemp"></span> ºF</p>
+                            <p>Wind: <span id="dayTwoWind"></span> mph</p>
+                            <p>Humidity: <span id="dayTwoHumidity"></span>%</p>
                         </div>
                         <div class="five-day-cards dayThree">
-                            <p id="dayThreeDate">MM/DD/YYYY</p>
-                            <p id="dayThreeIcon">Icon</p>
-                            <p id="dayThreeTemp">Temperature:</p>
-                            <p id="dayThreeWind">Wind:</p>
-                            <p id="dayThreeHumidity">Humidity:</p>
+                            <p><span id="dayThreeDate">MM/DD/YYYY</span></p>
+                            <span id="dayThreeIcon">Icon</span>
+                            <p>Temperature: <span id="dayThreeTemp"></span> ºF</p>
+                            <p>Wind: <span id="dayThreeWind"></span> mph</p>
+                            <p>Humidity: <span id="dayThreeHumidity"></span>%</p>
                         </div>
                         <div class="five-day-cards dayFour">
-                            <p id="dayFourDate">MM/DD/YYYY</p>
-                            <p id="dayFourIcon">Icon</p>
-                            <p id="dayFourTemp">Temperature:</p>
-                            <p id="dayFourWind">Wind:</p>
-                            <p id="dayFourHumidity">Humidity:</p>
+                            <p><span id="dayFourDate">MM/DD/YYYY</span></p>
+                            <span id="dayFourIcon">Icon</span>
+                            <p>Temperature: <span id="dayFourTemp"></span> ºF</p>
+                            <p>Wind: <span id="dayFourWind"></span> mph</p>
+                            <p>Humidity: <span id="dayFourHumidity"></span>%</p>
                         </div>
                         <div class="five-day-cards dayFive">
-                            <p id="dayFiveDate">MM/DD/YYYY</p>
-                            <p id="dayFiveIcon">Icon</p>
-                            <p id="dayFiveTemp">Temperature:</p>
-                            <p id="dayFiveWind">Wind:</p>
-                            <p id="dayFiveHumidity">Humidity:</p>
+                            <p><span id="dayFiveDate">MM/DD/YYYY</span></p>
+                            <span id="dayFiveIcon">Icon</span>
+                            <p>Temperature: <span id="dayFiveTemp"></span> ºF</p>
+                            <p>Wind: <span id="dayFiveWind"></span> mph</p>
+                            <p>Humidity: <span id="dayFiveHumidity"></span>%</p>
                         </div>
                     </div>
                 </section>
