--- a/index.html
+++ b/index.html
@@ -41,35 +41,35 @@
                     <div class="forecast-cards">
                         <div class="five-day-cards dayOne">
                             <p><span id="dayOneDate">MM/DD/YYYY</span></p>
-                            <span id="dayOneIcon">Icon</span>
+                            <span id="dayOneIcon"></span>
                             <p>Temperature: <span id="dayOneTemp"></span> ºF</p>
                             <p>Wind: <span id="dayOneWind"></span> mph</p>
                             <p>Humidity: <span id="dayOneHumidity"></span>%</p>
                         </div>
                         <div class="five-day-cards dayTwo">
                             <p><span id="dayTwoDate">MM/DD/YYYY</span></p>
-                            <span id="dayTwoIcon">Icon</span>
+                            <span id="dayTwoIcon"></span>
                             <p>Temperature: <span id="dayTwoTemp"></span> ºF</p>
                             <p>Wind: <span id="dayTwoWind"></span> mph</p>
                             <p>Humidity: <span id="dayTwoHumidity"></span>%</p>
                         </div>
                         <div class="five-day-cards dayThree">
                             <p><span id="dayThreeDate">MM/DD/YYYY</span></p>
-                            <span id="dayThreeIcon">Icon</span>
+                            <span id="dayThreeIcon"></span>
                             <p>Temperature: <span id="dayThreeTemp"></span> ºF</p>
                             <p>Wind: <span id="dayThreeWind"></span> mph</p>
                             <p>Humidity: <span id="dayThreeHumidity"></span>%</p>
                         </div>
                         <div class="five-day-cards dayFour">
                             <p><span id="dayFourDate">MM/DD/YYYY</span></p>
-                            <span id="dayFourIcon">Icon</span>
+                            <span id="dayFourIcon"></span>
                             <p>Temperature: <span id="dayFourTemp"></span> ºF</p>
                             <p>Wind: <span id="dayFourWind"></span> mph</p>
                             <p>Humidity: <span id="dayFourHumidity"></span>%</p>
                         </div>
                         <div class="five-day-cards dayFive">
                             <p><span id="dayFiveDate">MM/DD/YYYY</span></p>
-                            <span id="dayFiveIcon">Icon</span>
+                            <span id="dayFiveIcon"></span>
                             <p>Temperature: <span id="dayFiveTemp"></span> ºF</p>
                             <p>Wind: <span id="dayFiveWind"></span> mph</p>
                             <p>Humidity: <span id="dayFiveHumidity"></span>%</p>
