--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <section class="search-container">
                 <h2 class="search-title">Search for a City:</h2>
                 <input type="text" name="city-search" id="city-search" class="city-search">
-                <button type="submit" class="submit-btn">Submit</button>
+                <button type="submit" class="submit-btn">Get Weather!</button>
                 <div class="divider"></div>
                 <div class="search-history-container"></div>
             </section>
