--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="container">
             <section class="search-container">
                 <h2 class="search-title">Search for a City:</h2>
-                <input type="text" name="city-search" id="city-search" class="city-search">
+                <input type="text" name="city-search" id="city-search" class="city-search" placeholder="Enter City Here">
                 <button type="submit" class="submit-btn">Get Weather!</button>
                 <div class="divider"></div>
                 <div class="search-history-container"></div>
